# chat

./: .env  Cargo.toml  README.md  app.yaml  cliff.toml  deny.toml  test.http
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yaml  test.http
chat_server/fixtures/: test.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs  postgres.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml
chat_test/tests/: chat.rs
migrations/: 20240916132110_initial.sql  20240920101124_worksapce.sql
notify_server/: Cargo.toml  index.html  notify.yaml
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notif.rs  sse.rs
sql/: init.sql
src/: config.rs  lib.rs  main.rs
src/handlers/: auth.rs  chat.rs  mod.rs
