[workspace]
members = ["chat_server", "chat_core", "notify_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
    # "macros",
] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
chat-core = { path = "./chat_core" }
jwt-simple = "0.12.10"
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
] }
thiserror = "1.0.59"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.0", features = [
    "compression-full",
    "trace",
    "fs",
] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v7", "serde", "v4"] }
