[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum-extra = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
jwt-simple = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
