[package]
name = "notify-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chat-core = { workspace = true }
dashmap = "6.1.0"
futures = "0.3.30"
jwt-simple = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
